# MicGainControl

./: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  README.md  TrayManager.cpp  TrayManager.hpp  app.manifest  main.cpp  resources.rc
.github/workflows/: release.yml
